fix textarea alignment

--- a/submit-page.less
+++ b/submit-page.less
@@ -269,7 +269,7 @@
 
       margin-top: -6px;
       .roundfield {
-        width: 99%;
+        width: 509px;
         padding: 0;
         margin: 0;
         background-color: transparent;
@@ -412,6 +412,7 @@
         &#text-field {
           padding-top: 10px !important;
           textarea {
+            width: 516px;
             background: @hxhDontShitPost #ffffff no-repeat !important;
             &:focus {
               background: white !important;
@@ -451,6 +452,7 @@
         padding: 0;
         margin: 0;
         width: 100%;
+        max-width: 100%;
       }
 
       .infobar {
